# agent-working-ledger

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/skills/agent-working-ledger/: SKILL.md
.claude/skills/agent-working-ledger/templates/: OWNER.md.template  ledger.md.template
.github/workflows/: ci.yml
agent_working_ledger/: __init__.py  assets.py  close.py  list.py  new.py  supersede.py
docs/: anti-patterns.md  assets-command.md  checker.md  claude-code-adapter.md  close-command.md  codex-adapter.md  comparison-with-plans.md  installation.md  list-command.md  manual-evals.md  multi-agent-use.md  new-command.md  quickstart.md  release-checklist.md  summarize-command.md  supersede-command.md
documents/: agent-working-ledger-skill-specification-v0.3.md
evals/: README.md
evals/rubrics/: auditability.md  contamination-resistance.md  resumability.md  validation-quality.md
evals/runs/: interrupted-refactor-example.md
evals/scenarios/: failed-test-loop.md  handoff-after-compaction.md  interrupted-refactor.md  parallel-agent-contamination.md  stale-assumption.md
evals/templates/: manual-run.md  scoring-sheet.md
examples/: README.md
examples/debugging/: OWNER.md  ledger.md
examples/debugging/evidence/: README.md
examples/debugging/notes/: README.md
examples/feature-implementation/: OWNER.md  ledger.md
examples/feature-implementation/evidence/: README.md
examples/feature-implementation/notes/: README.md
examples/handoff/: OWNER.md  handoff.md  ledger.md
examples/handoff/evidence/: README.md
examples/handoff/notes/: README.md
examples/parallel-subagents/: README.md
examples/parallel-subagents/parallel-parent/: OWNER.md  ledger.md
examples/parallel-subagents/parallel-parent/evidence/: README.md
examples/parallel-subagents/parallel-parent/notes/: README.md
examples/parallel-subagents/parallel-subagent/: OWNER.md  ledger.md
examples/parallel-subagents/parallel-subagent/evidence/: README.md
examples/parallel-subagents/parallel-subagent/notes/: README.md
examples/superseded/: OWNER.md  ledger.md
examples/superseded/evidence/: README.md
examples/superseded/notes/: README.md
protocols/: adopt-ledger.md  close-ledger.md  create-ledger.md  handoff.md  orient.md  record-decision.md  record-discovery.md  record-validation.md  recover.md  supersede-ledger.md  update-ledger.md
skills/agent-working-ledger/: SKILL.md
skills/agent-working-ledger/templates/: evidence-README.md.template  handoff.md.template  machine-state.json.template
spec/: SPEC.md  invariants.md  ledger-scope.md  lifecycle.md  ownership-model.md  threat-model.md  validation-model.md
templates/: handoff.md.template  ledger.md.template
tests/: test_awl_assets.py  test_awl_check.py  test_awl_claude_code.py  test_awl_codex.py  test_awl_lifecycle_commands.py  test_awl_new.py  test_awl_readonly.py  test_examples.py
tools/: __init__.py
tools/awl/: assets.py  check.py  claude_code.py  cli.py  close.py  codex.py  list.py  markdown.py  new.py  summarize.py  supersede.py
wrappers/claude-code/: CLAUDE.md-snippet.md  SKILL.md  runtime-capabilities.md
wrappers/codex/: AGENTS.md-snippet.md  SKILL.md  runtime-capabilities.md
wrappers/generic-cli-agent/: prompt-wrapper.md  runtime-capabilities.md
