[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-working-ledger"
version = "0.1.0"
description = "Agent Working Ledger specification, templates, wrappers, and helper tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Agent Working Ledger contributors" }
]
keywords = ["agents", "ledger", "handoff", "resumability", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
awl = "tools.awl.cli:main"

[tool.setuptools.packages.find]
include = ["tools*"]
