[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-working-ledger"
version = "0.1.0"
description = "Agent Working Ledger specification, templates, wrappers, and helper tooling."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Agent Working Ledger contributors" }
]
keywords = ["agents", "ledger", "handoff", "resumability", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
awl = "tools.awl.cli:main"

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.setuptools.data-files]
"share/agent-working-ledger" = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
]
"share/agent-working-ledger/documents" = [
  "documents/*.md",
]
"share/agent-working-ledger/spec" = [
  "spec/*.md",
]
"share/agent-working-ledger/protocols" = [
  "protocols/*.md",
]
"share/agent-working-ledger/templates" = [
  "templates/*.template",
]
"share/agent-working-ledger/skills/agent-working-ledger" = [
  "skills/agent-working-ledger/SKILL.md",
]
"share/agent-working-ledger/skills/agent-working-ledger/templates" = [
  "skills/agent-working-ledger/templates/*.template",
]
"share/agent-working-ledger/wrappers/claude-code" = [
  "wrappers/claude-code/*.md",
]
"share/agent-working-ledger/wrappers/codex" = [
  "wrappers/codex/*.md",
]
"share/agent-working-ledger/wrappers/generic-cli-agent" = [
  "wrappers/generic-cli-agent/*.md",
]
"share/agent-working-ledger/docs" = [
  "docs/*.md",
]
"share/agent-working-ledger/examples" = [
  "examples/*.md",
]
"share/agent-working-ledger/examples/debugging" = [
  "examples/debugging/*.md",
]
"share/agent-working-ledger/examples/debugging/evidence" = [
  "examples/debugging/evidence/*.md",
]
"share/agent-working-ledger/examples/debugging/notes" = [
  "examples/debugging/notes/*.md",
]
"share/agent-working-ledger/examples/feature-implementation" = [
  "examples/feature-implementation/*.md",
]
"share/agent-working-ledger/examples/feature-implementation/evidence" = [
  "examples/feature-implementation/evidence/*.md",
]
"share/agent-working-ledger/examples/feature-implementation/notes" = [
  "examples/feature-implementation/notes/*.md",
]
"share/agent-working-ledger/examples/handoff" = [
  "examples/handoff/*.md",
]
"share/agent-working-ledger/examples/handoff/evidence" = [
  "examples/handoff/evidence/*.md",
]
"share/agent-working-ledger/examples/handoff/notes" = [
  "examples/handoff/notes/*.md",
]
"share/agent-working-ledger/examples/parallel-subagents" = [
  "examples/parallel-subagents/*.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-parent" = [
  "examples/parallel-subagents/parallel-parent/*.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-parent/evidence" = [
  "examples/parallel-subagents/parallel-parent/evidence/*.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-parent/notes" = [
  "examples/parallel-subagents/parallel-parent/notes/*.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-subagent" = [
  "examples/parallel-subagents/parallel-subagent/*.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-subagent/evidence" = [
  "examples/parallel-subagents/parallel-subagent/evidence/*.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-subagent/notes" = [
  "examples/parallel-subagents/parallel-subagent/notes/*.md",
]
"share/agent-working-ledger/examples/superseded" = [
  "examples/superseded/*.md",
]
"share/agent-working-ledger/examples/superseded/evidence" = [
  "examples/superseded/evidence/*.md",
]
"share/agent-working-ledger/examples/superseded/notes" = [
  "examples/superseded/notes/*.md",
]
"share/agent-working-ledger/evals" = [
  "evals/*.md",
]
"share/agent-working-ledger/evals/rubrics" = [
  "evals/rubrics/*.md",
]
"share/agent-working-ledger/evals/scenarios" = [
  "evals/scenarios/*.md",
]
