[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-working-ledger"
version = "0.1.0"
description = "Agent Working Ledger specification, templates, wrappers, and helper tooling."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Agent Working Ledger contributors" }
]
keywords = ["agents", "ledger", "handoff", "resumability", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
awl = "tools.awl.cli:main"

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.setuptools.data-files]
"share/agent-working-ledger" = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
]
"share/agent-working-ledger/documents" = [
  "documents/agent-working-ledger-skill-specification-v0.3.md",
]
"share/agent-working-ledger/spec" = [
  "spec/SPEC.md",
  "spec/invariants.md",
  "spec/ledger-scope.md",
  "spec/lifecycle.md",
  "spec/ownership-model.md",
  "spec/threat-model.md",
  "spec/validation-model.md",
]
"share/agent-working-ledger/protocols" = [
  "protocols/adopt-ledger.md",
  "protocols/close-ledger.md",
  "protocols/create-ledger.md",
  "protocols/handoff.md",
  "protocols/orient.md",
  "protocols/record-decision.md",
  "protocols/record-discovery.md",
  "protocols/record-validation.md",
  "protocols/recover.md",
  "protocols/supersede-ledger.md",
  "protocols/update-ledger.md",
]
"share/agent-working-ledger/templates" = [
  "templates/OWNER.md.template",
  "templates/evidence-README.md.template",
  "templates/handoff.md.template",
  "templates/ledger.md.template",
  "templates/machine-state.json.template",
]
"share/agent-working-ledger/skills/agent-working-ledger" = [
  "skills/agent-working-ledger/SKILL.md",
]
"share/agent-working-ledger/skills/agent-working-ledger/templates" = [
  "skills/agent-working-ledger/templates/OWNER.md.template",
  "skills/agent-working-ledger/templates/evidence-README.md.template",
  "skills/agent-working-ledger/templates/handoff.md.template",
  "skills/agent-working-ledger/templates/ledger.md.template",
  "skills/agent-working-ledger/templates/machine-state.json.template",
]
"share/agent-working-ledger/wrappers/claude-code" = [
  "wrappers/claude-code/CLAUDE.md-snippet.md",
  "wrappers/claude-code/SKILL.md",
  "wrappers/claude-code/runtime-capabilities.md",
]
"share/agent-working-ledger/wrappers/codex" = [
  "wrappers/codex/AGENTS.md-snippet.md",
  "wrappers/codex/SKILL.md",
  "wrappers/codex/runtime-capabilities.md",
]
"share/agent-working-ledger/wrappers/generic-cli-agent" = [
  "wrappers/generic-cli-agent/prompt-wrapper.md",
  "wrappers/generic-cli-agent/runtime-capabilities.md",
]
"share/agent-working-ledger/docs" = [
  "docs/anti-patterns.md",
  "docs/assets-command.md",
  "docs/checker.md",
  "docs/claude-code-adapter.md",
  "docs/close-command.md",
  "docs/comparison-with-plans.md",
  "docs/installation.md",
  "docs/list-command.md",
  "docs/manual-evals.md",
  "docs/multi-agent-use.md",
  "docs/new-command.md",
  "docs/quickstart.md",
  "docs/summarize-command.md",
  "docs/supersede-command.md",
]
"share/agent-working-ledger/examples" = [
  "examples/README.md",
]
"share/agent-working-ledger/examples/debugging" = [
  "examples/debugging/OWNER.md",
  "examples/debugging/ledger.md",
]
"share/agent-working-ledger/examples/debugging/evidence" = [
  "examples/debugging/evidence/README.md",
]
"share/agent-working-ledger/examples/debugging/notes" = [
  "examples/debugging/notes/README.md",
]
"share/agent-working-ledger/examples/feature-implementation" = [
  "examples/feature-implementation/OWNER.md",
  "examples/feature-implementation/ledger.md",
]
"share/agent-working-ledger/examples/feature-implementation/evidence" = [
  "examples/feature-implementation/evidence/README.md",
]
"share/agent-working-ledger/examples/feature-implementation/notes" = [
  "examples/feature-implementation/notes/README.md",
]
"share/agent-working-ledger/examples/handoff" = [
  "examples/handoff/OWNER.md",
  "examples/handoff/handoff.md",
  "examples/handoff/ledger.md",
]
"share/agent-working-ledger/examples/handoff/evidence" = [
  "examples/handoff/evidence/README.md",
]
"share/agent-working-ledger/examples/handoff/notes" = [
  "examples/handoff/notes/README.md",
]
"share/agent-working-ledger/examples/parallel-subagents" = [
  "examples/parallel-subagents/README.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-parent" = [
  "examples/parallel-subagents/parallel-parent/OWNER.md",
  "examples/parallel-subagents/parallel-parent/ledger.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-parent/evidence" = [
  "examples/parallel-subagents/parallel-parent/evidence/README.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-parent/notes" = [
  "examples/parallel-subagents/parallel-parent/notes/README.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-subagent" = [
  "examples/parallel-subagents/parallel-subagent/OWNER.md",
  "examples/parallel-subagents/parallel-subagent/ledger.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-subagent/evidence" = [
  "examples/parallel-subagents/parallel-subagent/evidence/README.md",
]
"share/agent-working-ledger/examples/parallel-subagents/parallel-subagent/notes" = [
  "examples/parallel-subagents/parallel-subagent/notes/README.md",
]
"share/agent-working-ledger/examples/superseded" = [
  "examples/superseded/OWNER.md",
  "examples/superseded/ledger.md",
]
"share/agent-working-ledger/examples/superseded/evidence" = [
  "examples/superseded/evidence/README.md",
]
"share/agent-working-ledger/examples/superseded/notes" = [
  "examples/superseded/notes/README.md",
]
"share/agent-working-ledger/evals" = [
  "evals/README.md",
]
"share/agent-working-ledger/evals/rubrics" = [
  "evals/rubrics/auditability.md",
  "evals/rubrics/contamination-resistance.md",
  "evals/rubrics/resumability.md",
  "evals/rubrics/validation-quality.md",
]
"share/agent-working-ledger/evals/scenarios" = [
  "evals/scenarios/failed-test-loop.md",
  "evals/scenarios/handoff-after-compaction.md",
  "evals/scenarios/interrupted-refactor.md",
  "evals/scenarios/parallel-agent-contamination.md",
  "evals/scenarios/stale-assumption.md",
]
"share/agent-working-ledger/evals/templates" = [
  "evals/templates/manual-run.md",
  "evals/templates/scoring-sheet.md",
]
"share/agent-working-ledger/evals/runs" = [
  "evals/runs/interrupted-refactor-example.md",
]
